# are-you-going

./: .env.dev  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  bacon.toml  docker-compose.yml  playwright.config.ts
assets/static/: 404.html  style.css
assets/views/dashboard/: event_detail.html  event_form.html  index.html  (+2 more)
config/: development.yaml  production.yaml  test.yaml
e2e/: global.setup.ts  package.json  pnpm-lock.yaml  tsconfig.json
e2e/fixtures/: index.ts
e2e/helpers/: db.ts  routes.ts
e2e/specs/: auth.spec.ts  dashboard.spec.ts  event-crud.spec.ts  event-htmx.spec.ts  rsvp-edit-flow.spec.ts  rsvp-phone-format.spec.ts  rsvp-sms-optin.spec.ts  rsvp-submit.spec.ts
migration/src/: lib.rs  m20250329_000001_create_events.rs  m20250329_000002_create_event_reminders.rs  m20250329_000003_create_rsvps.rs  m20250329_000004_create_magic_links.rs  m20250329_000005_create_sms_opt_outs.rs  m20250329_000006_create_reminder_sends.rs  m20250329_000007_add_allergies_text_to_rsvps.rs  m20250402_000001_add_sent_at_to_event_reminders.rs
src/: app.rs  lib.rs
src/controllers/: dashboard.rs  mod.rs  rsvp.rs  webhooks.rs
src/initializers/: view_engine.rs
src/middleware/: dashboard_auth.rs  mod.rs
src/models/: event_reminders.rs  events.rs  magic_links.rs  mod.rs  phone.rs  reminder_sends.rs  rsvps.rs  sms_opt_outs.rs
src/sms/: mock.rs  mod.rs  templates.rs  vonage.rs
src/tasks/: mod.rs  send_reminders.rs
src/views/: mod.rs
src/workers/: mod.rs  send_reminders.rs  send_sms.rs
tests/: mod.rs
tests/models/: events.rs  mod.rs  rsvps.rs
tests/requests/: dashboard.rs  mod.rs  rsvp.rs  webhooks.rs
tests/workers/: mod.rs  send_reminders.rs
(+15 files in other folders)
