[workspace]

[package]
name = "are-you-going"
version = "0.1.1"
edition = "2021"
publish = false
default-run = "are_you_going-cli"

[workspace.dependencies]
loco-rs = { version = "0.16" }

[dependencies]
loco-rs = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1" }
axum = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
migration = { path = "migration" }
sea-orm = { version = "1.1", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.9" }
uuid = { version = "1.6", features = ["v4"] }
include_dir = { version = "0.7" }
axum-extra = { version = "0.10", features = ["form"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = { version = "0.8" }
phonenumber = { version = "0.3" }
tower-http = { version = "0.6", features = ["normalize-path"] }
tera = { version = "1.19" }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

[[bin]]
name = "are_you_going-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }
wiremock = { version = "0.6" }
